--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,48 @@
-/* google font */
+/* Google Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
 
-/* layout */
-:root {
+/* Global Styles */
+:root 
+{
   --primary: #000075;
   --error: #e7195a;
 }
-body {
+
+* 
+{
+  box-sizing: border-box;
+}
+
+body 
+{
   background: #f1f1f1;
   margin: 0;
+  padding: 0;
   font-family: "Poppins";
 }
-header {
-  background: #fff;
+
+::-webkit-scrollbar 
+{
+  display: none;
 }
-header .container {
+
+/* Header Styles */
+header 
+{
+  background: var(--primary);
+}
+
+header .container 
+{
   max-width: 1400px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--primary);
 }
-header a {
+
+header a 
+{
   color: #fff;
   text-decoration: none;
   display: flex;
@@ -31,156 +51,312 @@ header a {
   gap: 10px;
 }
 
-img {
-  max-height: 80px;
+img 
+{
+  max-height: 42px;
   max-width: auto;
   border-radius: 50%;
+  border: 3px solid white;
 }
 
+.titleMain 
+{
+  font-size: 24px;
+  margin-left: 8px;
+}
 
-
-/* homepage */
-.home {
-  display: flex;
-  gap: 100px;
+/* Homepage Layout */
+.home 
+{
+  display: grid;
+  grid-template-columns: 28% 68%;
+  column-gap: 4%;
   margin: 0 5%;
+  height: 88vh;
+  align-items: center;
 }
 
-.details {
-  width: 25%;
+.empDiv 
+{
+  height: 90%;
+  overflow: auto;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 16px;
+  background-color: #f3f3f3;
+  box-shadow: 0px 10px 12px rgb(214, 214, 214) inset;
 }
 
-.employees {
-  width: 75%;
+.employees 
+{
+  height: 100%;
+  margin: 10px;
 }
-@media screen and (max-width: 728px) {
-  .home {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    gap: 20px;
-    padding: 0;
-  }
-  .details {
-    width: 75%;
-  }
-  
-  .employees {
-    width: 75%;
-  }
-  .employee-details {
-    margin: 10px auto;
-    padding: 10px;
-    display: flex;
-    gap: 8px;
-  }
-  .employee-details h4 {
-    margin: 0 0 10px 0;
-  }
-  .employee-details p {
-    margin: 0;
-  }
-  .employee-details .upd {
-    margin: 5px;
-    top: 25px;
-    right: 5px;
-    padding: 6px;
-  }
-  .create {
-    margin: 0;
-    padding: 0;
-  }
 
-
-
-  @media screen and (max-width: 400px) {
-    .employee-details {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start !important;
-    }
-
-
-  }
-/* ------------------------------ */
-}
-.employee-details {
+/* Employee Details */
+.employee-details 
+{
   background: #fff;
-  border-radius: 4px;
-  margin: 20px auto;
-  padding: 10px;
+  border-radius: 8px;
+  margin: 20px 14px;
+  padding: 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  border: 1px solid rgb(246, 246, 246);
+  box-shadow: 2px 4px 6px rgba(0,0,0,0.08);
 }
-.employee-details h4 {
-  margin: 0 0 10px 0;
-  font-size: 14px;
+
+.employee-details h4 
+{
+  margin: 0;
+  min-width: 54px;
+  max-width: 54px;
   color: var(--primary);
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 550 !important;
 }
-.employee-details p {
+
+.employee-details p 
+{
   margin: 0;
   font-size: 14px;
   color: #555;
 }
 
-strong {
+strong 
+{
   font-weight: 550;
 }
 
-span {
+span 
+{
   margin: 0 3px;
-  font-size: 14px;
+  font-weight: 550;
+  font-size: 16px;
   cursor: pointer;
   color: #333;
   transition: color 0.3s ease;
 }
-.employee-details .delClr:hover {
+
+.employee-details .delClr:hover 
+{
   color: var(--error);
 }
 
-.employee-details .editClr:hover {
-  color: var(--primary);
+.employee-details .editClr:hover 
+{
+  color: #4451fc;
 }
 
-/* new employee form */
-label, input {
-  display: block;
-}
-input {
+/* New Employee Form */
+input 
+{
   padding: 10px;
   margin-top: 2px;
   margin-bottom: 20px;
   width: 100%;
-  border: 1px solid #ddd;
-  border-radius: 4px;
   box-sizing: border-box;
+  border: none;
+  border-radius: .4rem;
+  background: #e8e8e8;
+  transition: 0.3s;
+  font-size: 1rem;
 }
-.btns{
+
+input:focus 
+{
+  outline-color: #1726fe;
+  background: #e8e8e8;
+  box-shadow: inset 2px 2px 12px #c5c5c5, inset -2px -2px 12px #ffffff;
+  transition: 0.3s;
+}
+
+.btns 
+{
   display: flex;
   gap: 10px;
   justify-content: space-between;
+  width: 100%;
 }
-form button {
+
+button 
+{
   background: var(--primary);
-  border: 0;
-  margin: 10px 0;
+  width: 100%;
   color: #fff;
-  padding: 5px;
-  font-family: "Poppins";
-  border-radius: 4px;
+  padding: 12px;
+  border-radius: 8px;
   cursor: pointer;
-  flex: 1;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
 }
-form button:first-child {
-  margin-right: auto;
+
+button:hover 
+{
+  background-color: #373fb7;
+  box-shadow: 8px 6px 12px #c6c6c6;
+  transition: 0.3s;
 }
-.error {
+
+/* Error Handling */
+.error 
+{
   color: var(--error);
   display: flex;
   text-align: center;
   font-weight: 500;
+  justify-content: center;
+}
+
+/* Additional Styles */
+.divder 
+{
+  border: 1px solid rgb(214, 214, 214);
+  width: 100%;
+  margin: 8px 0 28px 0;
+}
+
+.empForm 
+{
+  align-content: flex-start !important;
+}
+
+.empContent 
+{
+  display: flex;
+  width: 80%;
+  align-items: center;
+  gap: 24px;
+}
+
+#empId 
+{
+  width: 25px !important;
+}
+
+#empData 
+{
+  width: 75%;
+}
+
+.title 
+{
+  font-size: 30px;
+}
+
+.create 
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #555;
+  padding: 40px;
+  border-radius: 16px;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 480px) 
+{
+  header .container 
+  {
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+  img 
+  {
+    max-height: 35px;
+  }
+
+  .titleMain 
+  {
+    font-size: 20px;
+    margin-left: 6px;
+    font-weight: 400;
+  }
+
+  .home 
+  {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0 1%;
+    align-items: center;
+  }
+
+  .create 
+  {
+    border: none;
+    padding: 0 50px;
+  }
+
+  .empContent 
+  {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    gap: 24px;
+  }
+
+  #empId 
+  {
+    width: 25px !important;
+  }
+
+  #empData 
+  {
+    width: 75%;
+  }
+
+  .title 
+  {
+    font-size: 30px;
+  }
+
+  .employee-details 
+  {
+    margin: 16px 12px;
+    padding: 16px;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .employee-details h4 
+  {
+    min-width: 54px;
+    max-width: 54px;
+    font-size: 1.8rem;
+    font-weight: 600 !important;
+  }
+
+  .employee-details p 
+  {
+    font-size: 16px;
+  }
+
+  .upd 
+  {
+    width: 100%;
+    text-align: right;
+  }
+
+  span 
+  {
+    font-weight: 550;
+    font-size: 16px;
+  }
+
+  .empDiv 
+  {
+    height: 100%;
+    width: 94%;
+  }
+}
+
+@media screen and (max-width: 728px)
+{
+  /* Coming Soon */
 }
