--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,13 @@ body
   font-family: "Poppins";
 }
 
-::-webkit-scrollbar 
+/* Scroll Bar */
+
+.empDiv::-webkit-scrollbar 
 {
   display: none;
 }
+
 
 /* Header Styles */
 header 
@@ -65,6 +68,20 @@ img
   margin-left: 8px;
 }
 
+.about {
+  font-size: 20px;
+}
+
+/* Footer Styles */
+
+.copyright
+{
+  padding: 0;
+  margin: 0;
+  font-size: 15px;
+  text-align: center;
+}
+
 /* Homepage Layout */
 .home 
 {
@@ -72,7 +89,7 @@ img
   grid-template-columns: 28% 68%;
   column-gap: 4%;
   margin: 0 5%;
-  height: 88vh;
+  height: 86vh;
   align-items: center;
 }
 
