--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body
 
 
 /* Header Styles */
+
 header 
 {
   background: var(--primary);
@@ -37,10 +38,8 @@ header
 
 header .container 
 {
-  max-width: 1400px;
-  margin: 0 auto;
+  margin: 0 5%;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -54,7 +53,7 @@ header a
   gap: 10px;
 }
 
-img 
+.logo
 {
   max-height: 42px;
   max-width: auto;
@@ -68,28 +67,36 @@ img
   margin-left: 8px;
 }
 
-.about {
-  font-size: 20px;
+.about 
+{
+  font-size: 14px;
+  padding: 6px 16px;
+  border-radius: 6px;
+  border: 2px solid white;
+  color: #fff;
 }
 
 /* Footer Styles */
 
 .copyright
 {
-  padding: 0;
+  padding: 8px;
   margin: 0;
   font-size: 15px;
   text-align: center;
+  height: 55px;
+  align-content: end;
 }
 
 /* Homepage Layout */
+
 .home 
 {
   display: grid;
   grid-template-columns: 28% 68%;
   column-gap: 4%;
   margin: 0 5%;
-  height: 86vh;
+  height: 80vh;
   align-items: center;
 }
 
@@ -119,6 +126,7 @@ img
 }
 
 /* Employee Details */
+
 .employee-details 
 {
   background: #fff;
@@ -176,6 +184,7 @@ span
 }
 
 /* New Employee Form */
+
 input 
 {
   padding: 10px;
@@ -227,6 +236,7 @@ button:hover
 }
 
 /* Error Handling */
+
 .error 
 {
   color: var(--error);
@@ -237,6 +247,7 @@ button:hover
 }
 
 /* Additional Styles */
+
 .divder 
 {
   border: 1px solid rgb(214, 214, 214);
@@ -283,17 +294,12 @@ button:hover
 }
 
 /* Responsive Styles */
-@media screen and (max-width: 720px) 
-{
-  header .container 
-  {
-    margin: 0 auto;
-    justify-content: center;
-  }
 
+@media only screen and (min-width:75px) and (max-width: 960px)
+{
   img 
   {
-    max-height: 35px;
+    height: 35px;
   }
 
   .titleMain 
@@ -385,9 +391,4 @@ button:hover
   {
     display: none;
   }
-}
-
-@media screen and (max-width: 728px)
-{
-  /* Coming Soon */
 }
