--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -229,7 +229,7 @@
         max-height: 42px;
         max-width: auto;
         border-radius: 50%;
-        border: 3px solid green;
+        border: 3px solid whitesmoke;
     }
 
     /* Tech Used Div */
