--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -77,7 +77,7 @@
     max-height: 42px;
     max-width: auto;
     border-radius: 50%;
-    border: 3px solid whitesmoke;
+    border: 3px solid rgb(184, 184, 184);
 }
 
 /* Heading Css  */
@@ -229,7 +229,7 @@
         max-height: 42px;
         max-width: auto;
         border-radius: 50%;
-        border: 3px solid whitesmoke;
+        border: 3px solid rgb(184, 184, 184);
     }
 
     /* Tech Used Div */
