--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -77,7 +77,16 @@
     max-height: 42px;
     max-width: auto;
     border-radius: 50%;
-    border: 3px solid rgb(184, 184, 184);
+}
+
+#linkedin
+{
+    background-color: blue;
+}
+
+#github
+{
+    background-color: black;
 }
 
 /* Heading Css  */
@@ -114,7 +123,6 @@
     height: 100px;
     width: 160px;
     border-radius: 8px;
-    border: 3px solid rgb(184, 184, 184);
 }
 
 /* contact start */
@@ -229,7 +237,6 @@
         max-height: 42px;
         max-width: auto;
         border-radius: 50%;
-        border: 3px solid rgb(184, 184, 184);
     }
 
     /* Tech Used Div */
@@ -239,7 +246,6 @@
         height: 70px;
         width: 60px;
         border-radius: 8px;
-        border: 3px solid rgb(184, 184, 184);
     }
 
     /* Heading Css  */
