--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ header .container
   margin: 0px;
   padding: 10px;
   max-width: 200px;
-  max-height: 32px;
+  max-height: 36px;
   outline: none;
 }
 
@@ -81,13 +81,12 @@ header a
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 12px;
 }
 
 .logo
 {
   max-height: 42px;
-  max-width: auto;
   border-radius: 50%;
   border: 3px solid white;
 }
@@ -95,7 +94,7 @@ header a
 .titleMain 
 {
   font-size: 24px;
-  margin-left: 8px;
+  max-height: 36px;
 }
 
 .about 
@@ -162,7 +161,7 @@ header a
 {
   background: #fff;
   border-radius: 8px;
-  margin: 20px 14px;
+  margin: 22px 14px;
   padding: 16px;
   display: flex;
   justify-content: space-between;
@@ -331,13 +330,13 @@ button:hover
 {
   img 
   {
-    height: 30px;
+    height: 34px;
   }
 
   .titleMain 
   {
-    font-size: 14px;
-    margin-left: 3px;
+    font-size: 15px;
+    margin: 0px;
   }
 
   header a 
@@ -345,10 +344,16 @@ button:hover
     gap: 6px;
   }
 
+  header .container 
+  {
+    min-height: 56px;
+  }
+
   .about 
   {
     font-size: 12px;
     padding: 4px 12px;
+    min-height: 30px;
   }
 
   /* Search Bar */
@@ -407,7 +412,6 @@ button:hover
 
   .employee-details 
   {
-    margin: 16px 12px;
     padding: 16px;
     flex-direction: column;
     justify-content: space-between;
